--- a/templates/altic/pupilWelcome.html.twig
+++ b/templates/altic/pupilWelcome.html.twig
@@ -18,14 +18,14 @@
 			<div class="row">
 				{% for i in 1..5 %}
 				<div class="col text-center">
-					<a href="#" style="color: white; font-size: 1.5em;"><img style="background-color: rgba(0, 0, 0, 0.5); border-radius: 100%; padding: 10px;" class="img-fluid" src="{{ asset('images/pupil/map/' ~ i ~ '_.png') }}">{{ labels[i-1] }}</a>
+					<a href="#" style="color: white; font-size: 1.5em;"><img style="border-radius: 100%; padding: 10px;" class="img-fluid" src="{{ asset('images/pupil/map/' ~ i ~ '_.png') }}">{{ labels[i-1] }}</a>
 				</div>
 				{% endfor %}
 			</div>
 			<div class="row">
 				{% for i in 6..10 %}
 				<div class="col text-center">
-					<a href="#" style="color: white; font-size: 1.5em;"><img style="background-color: rgba(0, 0, 0, 0.5); border-radius: 100%; padding: 10px;" class="img-fluid" src="{{ asset('images/pupil/map/' ~ i ~ '_.png') }}">{{ labels[i-1] }}</a>
+					<a href="#" style="color: white; font-size: 1.5em;"><img style=" border-radius: 100%; padding: 10px;" class="img-fluid" src="{{ asset('images/pupil/map/' ~ i ~ '_.png') }}">{{ labels[i-1] }}</a>
 				</div>
 				{% endfor %}
 			</div>
