--- a/templates/altic/pupilWelcome.html.twig
+++ b/templates/altic/pupilWelcome.html.twig
@@ -11,6 +11,7 @@
 
 	<!--map and Constantin-->
 	{% set labels = ['Imoc', 'Isia', 'Vorod', 'Elemia', 'Rania', 'Pona', 'Nesa', 'Sovia', 'Caguma', 'Belam'] %}
+	{% set numOrder = [2, 5, 10, 1, 4, 3, 0, 6, 8, 9, 7] %}
 	<div class="row align-items-center"  style="padding: 10px; background-image: url({{ asset('images/pupil/map/sea.png') }});">
 		<!--map-->
 		<div class="col-9">
@@ -18,14 +19,14 @@
 			<div class="row">
 				{% for i in 1..5 %}
 				<div class="col text-center">
-					<a href="#" style="color: white; font-size: 1.5em;"><img style="border-radius: 100%; padding: 10px;" class="img-fluid" src="{{ asset('images/pupil/map/' ~ i ~ '_.png') }}">{{ labels[i-1] }}</a>
+					<a href="{{ path('altic_pupilTable', {number:numOrder[i-1]}) }}" style="color: white; font-size: 1.5em;"><img style="padding: 10px;" class="img-fluid" src="{{ asset('images/pupil/map/' ~ i ~ '_.png') }}">{{ labels[i-1] }} ({{ numOrder[i-1] }})</a>
 				</div>
 				{% endfor %}
 			</div>
 			<div class="row">
 				{% for i in 6..10 %}
 				<div class="col text-center">
-					<a href="#" style="color: white; font-size: 1.5em;"><img style=" border-radius: 100%; padding: 10px;" class="img-fluid" src="{{ asset('images/pupil/map/' ~ i ~ '_.png') }}">{{ labels[i-1] }}</a>
+					<a href="{{ path('altic_pupilTable', {number:numOrder[i-1]}) }}" style="color: white; font-size: 1.5em;"><img style="padding: 10px;" class="img-fluid" src="{{ asset('images/pupil/map/' ~ i ~ '_.png') }}">{{ labels[i-1] }} ({{ numOrder[i-1] }})</a>
 				</div>
 				{% endfor %}
 			</div>
