--- a/templates/altic/pupilWelcome.html.twig
+++ b/templates/altic/pupilWelcome.html.twig
@@ -7,7 +7,6 @@
 {{ parent() }}
 
 <div class="container">
-
 	<!--map and Constantin-->
 	{% set labels = ['Imoc', 'Isia', 'Vorod', 'Elemia', 'Rania', 'Pona', 'Nesa', 'Sovia', 'Caguma', 'Belam', 'Will'] %}
 	{% set numOrder = [2, 5, 10, 1, 4, 3, 0, 6, 8, 9, 7] %}
@@ -117,6 +116,10 @@
 		<div class="col-sm-4"><p class="h5">Mes enseignants</p>
 		
 	<!--ajoutEnseignant-->
+	{% for teacher in teacherLynx %}
+		{{ teacher.email }}
+		<a href="removeTeacher/{{teacher.id}}">supprimer</a>
+	{% endfor %}
 	{{form_start(addTeacher)}}
 		{{form_row(addTeacher.email)}}
 		<button class="btn btn-lg btn-primary" type="submit">Ajouter un enseignant</button>
