--- a/templates/altic/pupilWelcome.html.twig
+++ b/templates/altic/pupilWelcome.html.twig
@@ -46,26 +46,73 @@
 		
 		<div class="col-sm-4">
 			<p class="h5">Trophées</p>
-			<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/1.png"><br/><br/>
-			<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/2.png"><br/><br/>
-			<img style="-webkit-filter: grayscale(100%); filter: grayscale(100%); max-height: 100px; max-width: 100px;" src="images/pupil/characters/3.png"><br/><br/>
-			<img style="-webkit-filter: grayscale(100%); filter: grayscale(100%); max-height: 100px; max-width: 100px;" src="images/pupil/characters/4.png"><br/><br/>
-			<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/5.png"><br/><br/>
-			<img style="-webkit-filter: grayscale(100%); filter: grayscale(100%); max-height: 100px; max-width: 100px;" src="images/pupil/characters/6.png"><br/><br/>
-			<img style="-webkit-filter: grayscale(100%); filter: grayscale(100%); max-height: 100px; max-width: 100px;" src="images/pupil/characters/7.png"><br/><br/>
-			<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/8.png"><br/><br/>
-			<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/9.png"><br/><br/>
-			<img style="-webkit-filter: grayscale(100%); filter: grayscale(100%); max-height: 100px; max-width: 100px;" src="images/pupil/characters/10.png"><br/><br/>
-			<img style="-webkit-filter: grayscale(100%); filter: grayscale(100%); max-height: 100px; max-width: 100px;" src="images/pupil/characters/11.png"><br/><br/>
-			<img style="-webkit-filter: grayscale(100%); filter: grayscale(100%); max-height: 100px; max-width: 100px;" src="images/pupil/characters/12.png"><br/><br/>
-			<img style="-webkit-filter: grayscale(100%); filter: grayscale(100%); max-height: 100px; max-width: 100px;" src="images/pupil/characters/13.png"><br/><br/>
-			<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/14.png"><br/><br/>
-			<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/15.png"><br/><br/>
-			<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/16.png"><br/><br/>
-			<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/17.png"><br/><br/>
-			<img style="-webkit-filter: grayscale(100%); filter: grayscale(100%); max-height: 100px; max-width: 100px;" src="images/pupil/characters/18.png"><br/><br/>
-			<img style="-webkit-filter: grayscale(100%); filter: grayscale(100%); max-height: 100px; max-width: 100px;" src="images/pupil/characters/19.png"><br/><br/>
-			<img style="-webkit-filter: grayscale(100%); filter: grayscale(100%); max-height: 100px; max-width: 100px;" src="images/pupil/characters/20.png"><br/><br/>
+			<img style="max-height: 100px; max-width: 100px;" src="{{ asset('images/pupil/characters/1.png') }}"><br/><br/>
+			{% if percentArray[1] >= 70 %}
+    			<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/2.png"><br/><br/>
+				{% if percentArray[1] >= 100 %}
+					<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/3.png"><br/><br/>
+				{% endif %}
+			{% endif %}
+			{% if percentArray[2] >= 70 %}
+    			<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/4.png"><br/><br/>
+				{% if percentArray[2] >= 100 %}
+					<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/5.png"><br/><br/>
+				{% endif %}
+			{% endif %}
+			{% if percentArray[3] >= 70 %}
+    			<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/6.png"><br/><br/>
+				{% if percentArray[3] >= 100 %}
+					<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/7.png"><br/><br/>
+				{% endif %}
+			{% endif %}
+			{% if percentArray[4] >= 70 %}
+    			<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/8.png"><br/><br/>
+				{% if percentArray[4] >= 100 %}
+					<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/9.png"><br/><br/>
+				{% endif %}
+			{% endif %}
+			{% if percentArray[4] >= 70 %}
+    			<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/10.png"><br/><br/>
+				{% if percentArray[4] >= 100 %}
+					<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/11.png"><br/><br/>
+				{% endif %}
+			{% endif %}
+			{% if percentArray[5] >= 70 %}
+    			<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/12.png"><br/><br/>
+				{% if percentArray[5] >= 100 %}
+					<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/13.png"><br/><br/>
+				{% endif %}
+			{% endif %}
+			{% if percentArray[6] >= 70 %}
+    			<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/14.png"><br/><br/>
+				{% if percentArray[6] >= 100 %}
+					<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/15.png"><br/><br/>
+				{% endif %}
+			{% endif %}
+			{% if percentArray[7] >= 70 %}
+    			<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/16.png"><br/><br/>
+				{% if percentArray[7] >= 100 %}
+					<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/17.png"><br/><br/>
+				{% endif %}
+			{% endif %}
+			{% if percentArray[8] >= 70 %}
+    			<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/18.png"><br/><br/>
+				{% if percentArray[8] >= 100 %}
+					<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/19.png"><br/><br/>
+				{% endif %}
+			{% endif %}
+			{% if percentArray[9] >= 70 %}
+    			<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/20.png"><br/><br/>
+				{% if percentArray[9] >= 100 %}
+					<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/21.png"><br/><br/>
+				{% endif %}
+			{% endif %}
+			{% if percentArray[10] >= 70 %}
+    			<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/2.png"><br/><br/>
+				{% if percentArray[10] >= 100 %}
+					<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/3.png"><br/><br/>
+				{% endif %}
+			{% endif %}
 		</div>
 
 		<div class="col-sm-4"><p class="h5">Stastistiques</p>
