--- a/templates/altic/pupilWelcome.html.twig
+++ b/templates/altic/pupilWelcome.html.twig
@@ -117,7 +117,7 @@
 
 		<div class="col-sm-4"><p class="h5">Stastistiques</p>
 		<div class="progress">
-		Progression Totale
+		Progression Totale = {{ percentArray[0]}}%
 		<div class="progress-bar bg-info" role="progressbar" style="width: {{ percentArray[0] }}%" aria-valuenow="{{ percentArray[0] }}" aria-valuemin="0" aria-valuemax="100"></div>
 		</div><br>
 		<div class="progress">
@@ -129,15 +129,15 @@
 		<div class="progress-bar bg-info" role="progressbar" style="width: {{ percentArray[2] }}%" aria-valuenow="{{ percentArray[2] }}" aria-valuemin="0" aria-valuemax="100"></div>
 		</div><br>
 		<div class="progress">
-		Table de 3
+		Table de 3 
 		<div class="progress-bar bg-info" role="progressbar" style="width: {{ percentArray[3] }}%" aria-valuenow="{{ percentArray[3] }}" aria-valuemin="0" aria-valuemax="100"></div>
 		</div><br>
 		<div class="progress">
-		Table de 4
+		Table de 4 
 		<div class="progress-bar bg-info" role="progressbar" style="width: {{ percentArray[4] }}%" aria-valuenow="{{ percentArray[4] }}" aria-valuemin="0" aria-valuemax="100"></div>
 		</div><br>
 		<div class="progress">
-		Table de 5
+		Table de 5 
 		<div class="progress-bar bg-info" role="progressbar" style="width: {{ percentArray[5] }}%" aria-valuenow="{{ percentArray[5] }}" aria-valuemin="0" aria-valuemax="100"></div>
 		</div><br>
 		<div class="progress">
