--- a/templates/altic/caveGame.html.twig
+++ b/templates/altic/caveGame.html.twig
@@ -23,7 +23,7 @@
 <body>
 
 {% block body %}
-	{{ dump(questionsAndAnswers) }}
+	{#{{ dump(questionsAndAnswers) }}#}
 	<div id="drawing">
 		
 	</div>
