--- a/templates/altic/pupilWelcome.html.twig
+++ b/templates/altic/pupilWelcome.html.twig
@@ -116,10 +116,15 @@
 		<div class="col-sm-4"><p class="h5">Mes enseignants</p>
 		
 	<!--ajoutEnseignant-->
+	<ul class="list-group">
 	{% for teacher in teacherLynx %}
-		{{ teacher.email }}
-		<a href="removeTeacher/{{teacher.id}}">supprimer</a>
+		<li class="list-group-item d-flex justify-content-between align-items-center">
+			{{ teacher.email }}
+			<a class="badge badge-primary badge-pill" href="removeTeacher/{{teacher.id}}">supprimer</a>
+		</li>
 	{% endfor %}
+	</ul>
+	<br><br>
 	{{form_start(addTeacher)}}
 		{{form_row(addTeacher.email)}}
 		<button class="btn btn-lg btn-primary" type="submit">Ajouter un enseignant</button>
