--- a/templates/altic/pupilWelcome.html.twig
+++ b/templates/altic/pupilWelcome.html.twig
@@ -123,7 +123,13 @@
 	{{form_start(addTeacher)}}
 		{{form_row(addTeacher.email)}}
 		<button class="btn btn-lg btn-primary" type="submit">Ajouter un enseignant</button>
-	{{form_end(addTeacher)}}
+	{{form_end(addTeacher)}}{% for label, messages in app.flashes(['success', 'warning']) %}
+    {% for message in messages %}
+        <div class="flash-{{ label }}">
+            {{ message }}
+        </div>
+    {% endfor %}
+{% endfor %}
 </div>
 		</div>
 
