--- a/templates/altic/pupilWelcome.html.twig
+++ b/templates/altic/pupilWelcome.html.twig
@@ -130,7 +130,8 @@
 		<button class="btn btn-lg btn-primary" type="submit">Ajouter un enseignant</button>
 	{{form_end(addTeacher)}}{% for label, messages in app.flashes(['success', 'warning']) %}
     {% for message in messages %}
-        <div class="flash-{{ label }}">
+        <div class="alert alert-dismissible alert-warning">
+        	<button type="button" class="close" data-dismiss="alert">&times;</button>
             {{ message }}
         </div>
     {% endfor %}
