--- a/templates/altic/pupilWelcome.html.twig
+++ b/templates/altic/pupilWelcome.html.twig
@@ -116,49 +116,55 @@
 		</div>
 
 		<div class="col-sm-4"><p class="h5">Stastistiques</p>
-		<div class="progress">
+		Entraînements effectués : {{percentArray[12]}} <br>
+		Durée totale des entraînements : {{percentArray[13]}}h {{percentArray[14]}}mins <br>
 		Progression Totale = {{ percentArray[0]}}%
+		<div class="progress">
 		<div class="progress-bar bg-info" role="progressbar" style="width: {{ percentArray[0] }}%" aria-valuenow="{{ percentArray[0] }}" aria-valuemin="0" aria-valuemax="100"></div>
 		</div><br>
+		Table de 0 = {{ percentArray[7]}}%
 		<div class="progress">
-		Table de 1 = {{ percentArray[1]}}%
-		<div class="progress-bar bg-info" role="progressbar" style="width: {{ percentArray[1] }}%" aria-valuenow="{{ percentArray[1] }}" aria-valuemin="0" aria-valuemax="100"></div>
-		</div><br>
-		<div class="progress">
-		Table de 2
-		<div class="progress-bar bg-info" role="progressbar" style="width: {{ percentArray[2] }}%" aria-valuenow="{{ percentArray[2] }}" aria-valuemin="0" aria-valuemax="100"></div>
-		</div><br>
-		<div class="progress">
-		Table de 3 
-		<div class="progress-bar bg-info" role="progressbar" style="width: {{ percentArray[3] }}%" aria-valuenow="{{ percentArray[3] }}" aria-valuemin="0" aria-valuemax="100"></div>
-		</div><br>
-		<div class="progress">
-		Table de 4 
-		<div class="progress-bar bg-info" role="progressbar" style="width: {{ percentArray[4] }}%" aria-valuenow="{{ percentArray[4] }}" aria-valuemin="0" aria-valuemax="100"></div>
-		</div><br>
-		<div class="progress">
-		Table de 5 
-		<div class="progress-bar bg-info" role="progressbar" style="width: {{ percentArray[5] }}%" aria-valuenow="{{ percentArray[5] }}" aria-valuemin="0" aria-valuemax="100"></div>
-		</div><br>
-		<div class="progress">
-		Table de 6
-		<div class="progress-bar bg-info" role="progressbar" style="width: {{ percentArray[6] }}%" aria-valuenow="{{ percentArray[6] }}" aria-valuemin="0" aria-valuemax="100"></div>
-		</div><br>
-		<div class="progress">
-		Table de 7
 		<div class="progress-bar bg-info" role="progressbar" style="width: {{ percentArray[7] }}%" aria-valuenow="{{ percentArray[7] }}" aria-valuemin="0" aria-valuemax="100"></div>
 		</div><br>
+		Table de 1 = {{ percentArray[4]}}%
 		<div class="progress">
-		Table de 8
+		<div class="progress-bar bg-info" role="progressbar" style="width: {{ percentArray[4] }}%" aria-valuenow="{{ percentArray[4] }}" aria-valuemin="0" aria-valuemax="100"></div>
+		</div><br>
+		Table de 2 = {{ percentArray[1]}}%
+		<div class="progress">
+		<div class="progress-bar bg-info" role="progressbar" style="width: {{ percentArray[1] }}%" aria-valuenow="{{ percentArray[1] }}" aria-valuemin="0" aria-valuemax="100"></div>
+		</div><br>
+		Table de 3 = {{ percentArray[6]}}%
+		<div class="progress">
+		<div class="progress-bar bg-info" role="progressbar" style="width: {{ percentArray[6] }}%" aria-valuenow="{{ percentArray[6] }}" aria-valuemin="0" aria-valuemax="100"></div>
+		</div><br>
+		Table de 4  = {{ percentArray[5]}}%
+		<div class="progress">
+		<div class="progress-bar bg-info" role="progressbar" style="width: {{ percentArray[5] }}%" aria-valuenow="{{ percentArray[5] }}" aria-valuemin="0" aria-valuemax="100"></div>
+		</div><br>
+		Table de 5  = {{ percentArray[2]}}%
+		<div class="progress">
+		<div class="progress-bar bg-info" role="progressbar" style="width: {{ percentArray[2] }}%" aria-valuenow="{{ percentArray[2] }}" aria-valuemin="0" aria-valuemax="100"></div>
+		</div><br>
+		Table de 6 = {{ percentArray[8]}}%
+		<div class="progress">
 		<div class="progress-bar bg-info" role="progressbar" style="width: {{ percentArray[8] }}%" aria-valuenow="{{ percentArray[8] }}" aria-valuemin="0" aria-valuemax="100"></div>
 		</div><br>
+		Table de 7 = {{ percentArray[11]}}%
 		<div class="progress">
-		Table de 9
+		<div class="progress-bar bg-info" role="progressbar" style="width: {{ percentArray[11] }}%" aria-valuenow="{{ percentArray[11] }}" aria-valuemin="0" aria-valuemax="100"></div>
+		</div><br>
+		Table de 8 = {{ percentArray[9]}}%
+		<div class="progress">
 		<div class="progress-bar bg-info" role="progressbar" style="width: {{ percentArray[9] }}%" aria-valuenow="{{ percentArray[9] }}" aria-valuemin="0" aria-valuemax="100"></div>
 		</div><br>
+		Table de 9 = {{ percentArray[10]}}%
 		<div class="progress">
-		Table de 10
 		<div class="progress-bar bg-info" role="progressbar" style="width: {{ percentArray[10] }}%" aria-valuenow="{{ percentArray[10] }}" aria-valuemin="0" aria-valuemax="100"></div>
+		</div><br>
+		Table de 10 = {{ percentArray[3]}}%
+		<div class="progress">
+		<div class="progress-bar bg-info" role="progressbar" style="width: {{ percentArray[3] }}%" aria-valuenow="{{ percentArray[3] }}" aria-valuemin="0" aria-valuemax="100"></div>
 		</div>
 		</div>
 
